Fix icon alignment styles (#180)

--- a/projects/cps-ui-kit/styles/styles.scss
+++ b/projects/cps-ui-kit/styles/styles.scss
@@ -2,3 +2,9 @@
 @import 'variables.scss';
 @import 'fonts.scss';
 @import 'cps-tooltip-style.scss';
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
